--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,14 +5,6 @@
     <title>title</title>
   </head>
   <body>
-    
-    <div class="jumbotron">
-      <h1>Home Page</h1>
-      <%= link_to 'About', about_path %>
-      <p>...<%= image_tag 'saturn.jpg' %></p
-      
-      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
-    </div>
-    
+    <%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %>
   </body>
 </html>
