--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,7 +9,7 @@
   <div class="article-actions">
     <%= link_to "edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %> 
     <%= link_to "delete this article", article_path(@article), method: :delete,
-      data: { confrim: "Are you sure you want to delete the article"},
+      data: { confirm: "Are you sure you want to delete the article"},
       class: "btn btn-xs btn-danger" %>
     <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
   </div>
