--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,11 +16,12 @@
           </div>
         </div>
         <div class="article-actions">
-          <%= link_to "edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %> 
-          <%= link_to "delete this article", article_path(article), method: :delete,
-          data: { confirm: "Are you sure you want to delete the article"},
-          class: "btn btn-xs btn-danger" %>
-   
+          <% if logged_in? && current_user == article.user %>
+            <%= link_to "edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %> 
+            <%= link_to "delete this article", article_path(article), method: :delete,
+            data: { confirm: "Are you sure you want to delete the article"},
+            class: "btn btn-xs btn-danger" %>
+          <% end %>
         </div>
       </div>
     </div>
